--- a/map_brier.Rmd
+++ b/map_brier.Rmd
@@ -2,11 +2,9 @@
 title: "map_brier"
 output: html_document
 ---
+The code creates a map of AUC score on a selected variable and quantile. It requires scores computed in "score_auc". Signficance of the Brier skill score is represented with dots (it compares ps to climato).
 
 ```{r setup, include=FALSE}
-
-dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
-dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
 
 library(maps)
 library(nnet)
@@ -30,55 +28,82 @@ library(ggnewscale)
 
 ## Parameters 
 
-Reminder of the score array structure (first dimension details)
-
-1: roc quant1
-2: roc last quant
-3: brier quant1
-4: brier ss quant1
-5: brier last quant
-6: brier ss last quant
+Some are loaded (because they remain permanent through codes)
+Some are set here and can therefore be modified by user
 
 ```{r}
 
-# chosen variable
-indicateurs <- c("drainall", "etall", "yieldwheat", "yieldgrass", "yieldgrassC2C3")
-indicateur <- indicateurs[1]
+                                     ### SELECTED PARAMETERS (to be set by user) ###
+
+# selected project and directories
+selected_project <- "tree" # stics or season or tree
+dir_data <- paste0("D:/HOME/ekamir/scoring_medscope/data/",selected_project) 
+dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
+
+# selecting variable of interest
+load(file = file.path(dir_data, "extract", "indicateurs.RData"))
+indicateur <- indicateurs[3]
 
 # chosen quantile
-quant <- 4 # 4 = low , 6 = upper 
+quant <- 2 # 1 = low , 2 = upper : drain low, et high, yield high+low
 kantile <- "ter" # ter or quint
-extremes <- c("first", "last")
+extremes <- c("first", "last","first", "last")
 
-# score value interval
+# time integration
+scale <- " MJJASO"
+
+# score value interval: to be modified, especially if all grids are black, it means they're out of range
 bss_limits <- c(-0.25,0.25)
 
-# color palette for msess score
+# error limit
+na_limit <- 10
+
+# color palette for acc score
 score_palette <- c("#ca0020", "#f4a582", "#f7f7f7", "#92c5de", "#0571b0")
 
 # !! DO NOT MODIFY !! one color palette for signifiance plotting  
 sign_palette <- c("black", "black")
+
+                                      ### LOADED PARAMETERS (permanent) ###
+
 
 # trick to get automatically number of grids 
 nom_ref <- paste0(indicateur,1,"_ref_uerra5.RData")
 load(file = file.path(dir_data, "extract", nom_ref))
 ngrids <- dim(array_obs)[1]
 
+# grid size (depending on the zoom)
+if (selected_project=="season"|selected_project=="tree"){
+  grid_size <- 0.85
+} else if (selected_project=="stics"){
+  grid_size <- 2.15
+}
+
+# background map
+key = "AIzaSyCD2-pP0yfM8aC8sjCB4g--CaCcExP6NhU"; "AIzaSyB24WUzCzX1lErLgsVLtio1c7QxLfw1_SA"
+register_google(key = "AIzaSyB24WUzCzX1lErLgsVLtio1c7QxLfw1_SA")
+if (selected_project=="season"|selected_project=="tree"){
+    back_map <- get_map(location = c(1.2, 41, 10, 46), maptype = "satellite", source = "google") 
+} else if (selected_project=="stics"){
+    back_map <- get_map(location = c(4, 43.1, 5.7, 44), maptype = "satellite", source = "google") 
+}
+
 ```
 
-## Mapping AUC through a shapefile
+## Mapping Brier score through a shapefile
 
 We transform the array of scores into a shapefile containing gridded score values and their significance.
-Significance is computed using Wilcoxon's test (H0: mean value not above 0) on bootstrapped score values.
+Significance is computed using Wilcoxon's test (H0: mean (bss ps - bss clim) value not above 0) on bootstrapped score values.
 
 ```{r }
 
-### BUIDLING SHAPEFILE OF MEAN MSESS VALUES AND THEIR SIGNIFICANCE ###
+                # BUIDLING SHAPEFILE OF MEAN AUC VALUES AND THEIR SIGNIFICANCE #
 
-  ## extracting bootstrapped msess values
-
+  ## extracting bootstrapped brier score values
+# setting up arrays for all bootstrapped scores to be stored in
 score_boot <- array(NA, dim=c(ngrids, 6, nboot)) 
 
+# loading data and filling up the array just set
   for (b in 1:nboot)  { 
   
     nom_prev <- paste0(indicateur, b, "_", kantile, "aucgrid_uerra5.RData")
@@ -108,9 +133,9 @@ matrix4shp[,1] <- apply(score_boot[,quant,], 1, mean, na.rm = TRUE) #  mean of b
 
 for (i in 1:ngrids)  { 
     if (length(which(is.na(score_boot[i,quant,]))) >= 25) {matrix4shp[i,2] <- 0; matrix4shp[i,1] <- NA}
-    else { wmsess <- wilcox.test(score_boot[i,quant,], mu = 0, alternative = "greater", conf.level = 0.95) # h0 represented by "mu = 0.5" & "alternative = greater", alternative being h1
+    else { wbrier <- wilcox.test(score_boot[i,quant,], mu = 0, alternative = "greater", conf.level = 0.95) # h0 represented by "mu = 0" & "alternative = greater", alternative being h1
 
-      if (wmsess$p.value < 0.05) { # p value de 5%
+      if (wbrier$p.value < 0.05) { # p value de 5%
       matrix4shp[i,2] <- 1 # 1 = test validé, 0 = non validé (voir plus haut)
       }
     }
@@ -125,16 +150,16 @@ shp_grid <- st_as_sf(df_shp) # we transform spatial data frame into shapefile, w
 shp_grid$significance[which(shp_grid$significance==0)] <- NA # to help plotting, we set significance as NA instead of 0
 
 
-### MAPPING WITH GGPLOT2 ###
+                                      # MAPPING WITH GGPLOT2 #
 
 ggmap(back_map) +
-geom_sf(data = shp_grid, aes(color = bss), size=2.15, shape = 15) + 
+geom_sf(data = shp_grid, aes(color = bss), size=grid_size, shape = 15) + 
   scale_color_gradientn(colours=score_palette, limits = bss_limits, na.value = "black", guide = guide_colorbar(barwidth = 10, barheight = 0.25, nbin = 5)) +
 new_scale("color")+
 geom_sf(data = shp_grid, aes(color = significance), shape = 3, size = 0.15, show.legend = FALSE) +
   scale_color_gradientn(colours=sign_palette, na.value = "transparent")+
 theme(legend.direction = "horizontal", legend.position = "right", legend.title = element_text(), legend.text=element_text(size=6),  
       plot.title = element_text(size = 12, hjust = 0, vjust = 1.5)) + 
-  labs(title = paste0(indicateur," Brier Skill Score ", extremes[quant], " ", kantile))
+  labs(title = paste0(indicateur," Brier Skill Score ", extremes[quant], " ", kantile, scale))
 
 ```
