--- a/memory_effect.Rmd
+++ b/memory_effect.Rmd
@@ -7,6 +7,7 @@ output:
 ---
 
 ```{r setup, include=FALSE, echo=FALSE}
+
 dir_data <- "D:/HOME/ekamir/scoring_medscope/data/stics" 
 dir_plot <- "D:/HOME/ekamir/scoring_medscope/figure" 
 
@@ -15,38 +16,39 @@ library(dplyr)
 library(tidyverse)
 library(stats)
 
+no_core <- 6
+
 ```
 
 ## Parameters 
 
 ```{r }
 
-# bootstrap and cores
-no_core <- 6
-nboot <- 100
+# bootstrap
+load(file = file.path(dir_data, "extract", "nboot.RData"))
+
 
 # variables
-indicateurs <- c("drainall", "etall", "yieldwheat", "yieldgrass", "yieldgrassC2C3")
+load(file = file.path(dir_data, "extract", "indicateurs.RData"))
+load(file = file.path(dir_data, "extract", "temporalite.RData"))
 indicateur <- indicateurs[5]
-  ### temporalité
-  if (indicateur=="yieldwheat"|indicateur=="yieldgrass"|indicateur=="yieldgrassC2C3"){
-      temporalite <- "yearly"
-  }else {temporalite <- "quinzaine"}
+temporalite <- temporalite[5]
 
 # runs
 run <- seq(from=1, to=25, by=1)
 nrun <- length(run)
 
 # temporal agregation
-temp <- 9:20
+temp <- 9:20 # length of agregation
+agreg_type <- sum # type of agregation
 ntemp <- length(temp)
 
 # automatic parameters
-nom_ref <- paste0(indicateur,1,"_prev_uerra5.RData")
-load(file = file.path(dir_data, "extract", nom_ref))
-ngrids <- dim(array_prev)[1]
-nan <- dim(array_prev)[2]
-nrun <- dim(array_prev)[3]
+nom_clim <- paste0(indicateur,1,"_clim_uerra5.RData")
+load(file = file.path(dir_data, "extract", nom_clim))
+ngrids <- dim(array_clim)[1]
+nan <- dim(array_clim)[2]
+nrun <- dim(array_clim)[3]
 an <- seq(1993,2016,1)
 
 ```
@@ -54,19 +56,21 @@ an <- seq(1993,2016,1)
 ## Loading and shaping data
 
 ```{r }
+
 ### LOADING ###
+
 
                                             ### WITH TIME DIMENSION ###
 if (temporalite=="quinzaine"){
 
-ps_original <- array(NA, dim=c(ngrids, nan, nrun, ntemp))
+clim_original <- array(NA, dim=c(ngrids, nan, nrun, ntemp))
 ref_original <- array(NA, dim=c(ngrids, nan, ntemp))
 
  for (year in an){
  y <- which(an==year)
 
        # bootstrap iteration index of the year selected
-    load(file = file.path(dir_data, "extract", "years.RData")) # list of years in each bootstrap iteration
+    load(file = file.path(dir_data, "extract", "rand_years.RData")) # list of years in each bootstrap iteration
      
     list_match <- lapply(rand_year, function(x) which(year == x)) # list of matchs between list of years randomly generated for the bootstrap and the year we are interested in
      
@@ -77,9 +81,9 @@ ref_original <- array(NA, dim=c(ngrids, nan, ntemp))
        else {y_index <- y_index; b_index <- b_index}
      }
      
-  nom_prev <- paste0(indicateur,b_index,"_prev_uerra5.RData")
-  load(file = file.path(dir_data, "extract", nom_prev))
-  ps_original[,y,,] <- array_prev[,y_index[1],,temp]
+  nom_clim <- paste0(indicateur,b_index,"_clim_uerra5.RData")
+  load(file = file.path(dir_data, "extract", nom_clim))
+  clim_original[,y,,] <- array_clim[,y_index[1],,temp]
   
   nom_ref <- paste0(indicateur,b_index,"_ref_uerra5.RData")
   load(file = file.path(dir_data, "extract", nom_ref))
@@ -91,7 +95,7 @@ ref_original <- array(NA, dim=c(ngrids, nan, ntemp))
 } else if (temporalite=="yearly"){
 
 
-ps_original <- array(NA, dim=c(ngrids, nan, nrun))
+clim_original <- array(NA, dim=c(ngrids, nan, nrun))
 ref_original <- array(NA, dim=c(ngrids, nan))
 
  for (year in an){
@@ -109,9 +113,9 @@ ref_original <- array(NA, dim=c(ngrids, nan))
        else {y_index <- y_index; b_index <- b_index}
      }
      
-  nom_prev <- paste0(indicateur,b_index,"_prev_uerra5.RData")
-  load(file = file.path(dir_data, "extract", nom_prev))
-  ps_original[,y,] <- array_prev[,y_index[1],]
+  nom_clim <- paste0(indicateur,b_index,"_clim_uerra5.RData")
+  load(file = file.path(dir_data, "extract", nom_clim))
+  clim_original[,y,] <- array_clim[,y_index[1],]
   
   nom_ref <- paste0(indicateur,b_index,"_ref_uerra5.RData")
   load(file = file.path(dir_data, "extract", nom_ref))
@@ -123,6 +127,8 @@ ref_original <- array(NA, dim=c(ngrids, nan))
 ngrids <- dim(ref_original)[1]
 
 
+
+
 ### RESHAPING ###
 
 # we build a 3 columns data frame: grid, year, value
@@ -130,7 +136,10 @@ ngrids <- dim(ref_original)[1]
 df_out <- data.frame()
 
 for (mb in 1:nrun){
-    int <- as.data.frame(ps_original[,,mb])
+  if (temporalite=="yearly"){
+    int <- as.data.frame(clim_original[,,mb])
+  }else if (temporalite=="monthly"){ 
+    int <- as.data.frame(apply(clim_original[,,mb,], c(1,2), agreg_type))}
     colnames(int) <- an
     int <- int %>% gather(an) %>% mutate(maille=rep(seq(1,ngrids,1), times=nan))
     df_out <- rbind(df_out, int)
@@ -143,7 +152,7 @@ for (mb in 1:nrun){
 
 ```{r }
 
-fit <- aov(data = df_out, formula= value ~ an + maille)
+fit <- aov(data = df_out, formula = value ~ an + maille + an:maille)
 summary(fit)
 
 ```
@@ -158,6 +167,8 @@ boxplot(log(value) ~ maille, data=df_out, cex.lab=1.5, xlab="maille",ylab="log(v
 # interactions: boxplot(log(value) ~ an*maille, data=df_out, cex.lab=1.5, xlab="combinaison annee et maille ",ylab="log(value)")
 
 
+with(df_out, {interaction.plot(x.factor = maille, trace.factor=an, response = value, type="l", fun=mean)},
+abline(h=mean(value[an==2002]),col="red"))
 ```
 
 ## Verification plots
